--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongo-express": "^1.1.0-rc-3",
     "mongoose": "^8.11.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9"
   }
 }
