--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongo-express": "^1.1.0-rc-3",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "sharp": "^0.33.5"
   }
 }
